# aghast

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: build.yml  check.yml
.sqlx/: query-35db7e7faa17d47e020dd6d50ed1698e9fef93f2e8b845c10573d56c3ac6717e.json  query-76bbfae4530727b55168bcf3bade84cec4c690f0ddfc33dc7a6af9affdc0911a.json  query-9bd399fe24ddd7feea85880be110ca2378b4478aa4f007559c25d2f03b8a6cbb.json  query-c72b7425e04113760c0a60d5ab81f17e5a253817e8ca7fceede16271706e275f.json  query-efb29c866cf014586ff4bcced101d1c101474eb7ea060263c97eedb601e39b9a.json  query-f43233cdbc6ed5e61783483e28da2d768ccebf7e13982f741ae7bc8fbc2484f4.json  query-fd2aa81c752fe22fae7288612d40bed741afc12d1d5d57cd9a3a8fbca6e1e882.json
migrations/: 20241126202538_user_channel_table.sql  20241128003706_message_edit_table.sql
src/: extract.rs  interact.rs  main.rs
