[package]
name = "aghast"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http2", "http1", "tokio", "json"] }

tokio = { version = "1", features = ["rt", "net"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = { version = "0.3", default-features = false }

twilight-http = { version = "0.16.0-rc.1", default-features = false, features = ["rustls-webpki-roots", "hickory"] }
twilight-interactions = "0.16.0-rc.1"
twilight-model = "0.16.0-rc.1"
niloecl = "0.1"

valk-utils = "0.1"
thiserror = "2"
vss = "0.1"

ed25519-dalek = "2"
serde_json = "1"
hex = "0.4"

